<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information_from_university"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/information_from_university"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:enabled="false"
            android:visible="false"
            android:title="@string/course_notice"/>
        <item
            android:id="@+id/nav_important_notcie_to_you"
            android:icon="@drawable/ic_announcement_black_24dp"


            android:title="@string/important_message_to_you"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_navigation_logout"
            android:enabled="false"
            android:visible="false"
            android:title="@string/logout"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
