<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_push"
        android:summary="@string/pref_description_enable_push"
        android:title="@string/pref_title_enable_push" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->



    <ListPreference
        android:defaultValue="5"
        android:entries="@array/list_time_interval"
        android:entryValues="@array/list_time_interval_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_time_interval" />

</PreferenceScreen>
