<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kyokuheishin.android.apucampusterminalforandroid.eggActivity"
    tools:showIn="@layout/activity_egg">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_notification"
        android:id="@+id/notification_tester"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/notification_tester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_job_scheduler"
        android:id="@+id/job_scheduler_tester"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@+id/job_scheduler_tester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_scheduler_cancel_all"
        android:id="@+id/job_scheduler_cancel_all"
        />

</android.support.constraint.ConstraintLayout>
